Fixed unnecessary white space at bottom of page

--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -24,5 +24,5 @@
 .products-container {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 100px 50px 100px;
+    margin: 0 100px;
 }
